--- a/src/components/character-header/character-header.component.html
+++ b/src/components/character-header/character-header.component.html
@@ -22,7 +22,7 @@
     <div class="text-muted npc-subline">
       <span class="height">{{character.heightString || 0}} <span class="font-weight-bold">({{heightDescriptor.describe(character)}})</span></span>,
       <span class="weight">{{(character.weight || 0) + " lbs."}} <span class="font-weight-bold">({{weightDescriptor.describe(character)}})</span></span>,
-      <span class="weight">{{(character.age || 0) + " years old"}} <span class="font-weight-bold">({{ageDescriptor.describe(character)}})</span></span>
+      <span class="age">{{(character.age || 0) + " years old"}} <span class="font-weight-bold">({{ageDescriptor.describe(character)}})</span></span>
     </div>
   </div>
 </div>
