--- a/src/components/ability-score-list/ability-score-list.component.html
+++ b/src/components/ability-score-list/ability-score-list.component.html
@@ -1,7 +1,7 @@
 <div class="ability-score-list bt-thick bb-thick">
     <div class="refresh pull-right"><a href="" (click)="onRefreshAbilitiesClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Abilities</span></a></div>
     <div class="ability-list row">
-        <ability-score [ability]="ability" [character]="character" *ngFor="let ability of abilityList"></ability-score>
+        <dnd-ability-score [ability]="ability" [character]="character" *ngFor="let ability of abilityList"></dnd-ability-score>
     </div>
     <div class="ability-info attribute-title">
         <span class="ability-sum">Total: {{abilitySum}}</span>
