--- a/src/components/stats/stats.component.html
+++ b/src/components/stats/stats.component.html
@@ -21,20 +21,20 @@
       </div>
     </div>
     <div class="col-md-3 col-sm-6">
-      <speed-display [speed]="character.speed"></speed-display>
+      <dnd-speed [speed]="character.speed"></dnd-speed>
     </div>
   </div>
 </div>
 <div class="bb-thin">
   <div class="row">
     <div class="col-md-4">
-      <languages-display [languages]="character.languages"></languages-display>
+      <dnd-languages [languages]="character.languages"></dnd-languages>
     </div>
     <div class="col-md-4">
-      <senses-display [senses]="character.senses"></senses-display>
+      <dnd-senses [senses]="character.senses"></dnd-senses>
     </div>
     <div class="col-md-4">
-      <skills-display [character]="character"></skills-display>
+      <dnd-skills [character]="character"></dnd-skills>
     </div>
   </div>
 </div>
