--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,3 +1,7 @@
+.navbar {
+    flex-direction: row;
+}
+
 .attribute-block {
     padding: 12px;
     text-align: center;
@@ -39,7 +43,4 @@
 sub.refresh {
     margin-left: 0.5rem;
     font-size: 60% !important;
-    // vertical-align: top;
 }
-
-// TODO: MakeButton(secondary) with
