--- a/src/components/character-generator/character-generator.component.html
+++ b/src/components/character-generator/character-generator.component.html
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <p class="lead">A simple tool for generating NPC character statistics based on the 5th edition Dungeons &amp; Dragons ruleset.</p>
+    <h1>Character Generator</h1>
+    <p class="lead">A simple tool for generating character statistics based on the 5th edition Dungeons &amp; Dragons ruleset.</p>
     <div class="row">
       <div class="col-12 text-right">
         <button class="pull-left btn btn-lg btn-secondary" (click)="advancedMode = !advancedMode">Advanced</button>
