--- a/src/components/character-header/character-header.component.scss
+++ b/src/components/character-header/character-header.component.scss
@@ -1,9 +1,9 @@
-.npc-header {
-    .npc-class {
+.character-header {
+    .character-class {
         font-size: 2.5rem;
     }
 
-    .npc-subline {
+    .character-subline {
         font-style: italic;
         .sub-race {
             &:before {
