--- a/src/components/character-header/character-header.component.html
+++ b/src/components/character-header/character-header.component.html
@@ -1,8 +1,8 @@
-<div class="npc-header">
-  <h1 class="npc-name">
+<div class="character-header">
+  <h1 class="character-name">
     <div class="refresh pull-right" style="font-size: 24px"><a href="" (click)="onRefreshNameClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Name</span></a></div>
     {{character.name}}
-    <div class="npc-class bt-light bb-thick pb-2">
+    <div class="character-class bt-light bb-thick pb-2">
       <small class="text-muted">
         {{character.class.name}}<source-reference [reference]="character.class.reference"></source-reference>
         <span *ngIf="character.classArchetype">({{character.classArchetype.name}}<source-reference [reference]="character.classArchetype.reference"></source-reference>)</span>
@@ -11,15 +11,15 @@
   </h1>
   <div class="bb-thin pt-2 pb-3">
     <div class="refresh pull-right"><a href="" (click)="onRefreshPhysicalityClick($event)"><i class="fa fa-refresh"></i><span class="sr-only">Random Physicality</span></a></div>
-    <div class="text-muted npc-subline">
+    <div class="text-muted character-subline">
       <span class="gender">{{character.genderDescription}}</span>
       <span class="race">{{character.race.name}}</span>
       <source-reference [reference]="character.race.reference"></source-reference>
       <span class="sub-race" *ngIf="character.subrace">{{character.subrace.name}}<source-reference [reference]="character.subrace.reference"></source-reference></span>,
       <span class="size">{{character.race.size}}</span>,
-      <span class="npc-alignment">{{character.alignmentDescription}}</span>
+      <span class="alignment">{{character.alignmentDescription}}</span>
     </div>
-    <div class="text-muted npc-subline">
+    <div class="text-muted dnd-5e-tools-subline">
       <span class="height">{{character.heightString || 0}} <span class="font-weight-bold">({{heightDescriptor.describe(character)}})</span></span>,
       <span class="weight">{{(character.weight || 0) + " lbs."}} <span class="font-weight-bold">({{weightDescriptor.describe(character)}})</span></span>,
       <span class="age">{{(character.age || 0) + " years old"}} <span class="font-weight-bold">({{ageDescriptor.describe(character)}})</span></span>
