--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <dnd-navbar [title]="title" (menuClick)="sidebarOpen = !sidebarOpen"></dnd-navbar>
 <dnd-sidebar [(collapsed)]="!sidebarOpen" (navigate)="sidebarOpen = false"></dnd-sidebar>
 <router-outlet></router-outlet>
+<dnd-footer></dnd-footer>
