Finish refactoring and add name generator.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "theme.scss";
 @import "blocks.scss";
 @import "features.scss";
+@import "codemirror.scss";
