--- a/src/app/name-generator/name-generator-config/name-generator-config.component.html
+++ b/src/app/name-generator/name-generator-config/name-generator-config.component.html
@@ -1,117 +1,27 @@
 <div class="generator-config">
   <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-      <label for="race">Race</label>
-      <select class="form-control" name="race" [(ngModel)]="config.race" (input)="config.subrace = null">
-        <option [ngValue]="null" selected>Any Race</option>
-        <option *ngFor="let race of races" [ngValue]="race">{{race.name}}</option>
-      </select>
-      <select class="form-control mt-2" name="subrace" [(ngModel)]="config.subrace" [disabled]="!config.race || config.race.subraces.length === 0">
-        <option *ngIf="(config.race === null) || (config.race.subraces.length > 0)" [ngValue]="null" selected>Any Subrace</option>
-        <ng-template [ngIf]="config.race !== null">
-          <option *ngIf="config.race.subraces.length === 0" [ngValue]="null" selected>No Subraces</option>
-          <option *ngFor="let subrace of (config.race.subraces || [])" [ngValue]="subrace">{{subrace.name}}</option>
-        </ng-template>
-    </select>
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-      <label for="class">Class</label>
-      <select class="form-control" name="class" [(ngModel)]="config.class" (input)="config.classArchetype = null">
-        <option [ngValue]="null" selected>Any Class</option>
-        <option *ngFor="let class of classes" [ngValue]="class">{{class.name}}</option>
-    </select>
-      <select class="form-control mt-2" name="classArchetype" [(ngModel)]="config.classArchetype" [disabled]="!config.class || config.class.archetypes.length === 0">
-        <option *ngIf="(config.class === null) || (config.class.archetypes.length > 0)" [ngValue]="null" selected>Any {{config.class === null ? "Archetype": config.class.archetypeName.singular}}</option>
-        <ng-template [ngIf]="config.class != null">
-          <option *ngIf="config.class.archetypes.length === 0" [value]="null" selected>No {{config.class === null ? "Archetypes": config.class.archetypeName.plural}}</option>
-          <option *ngFor="let archetype of (config.class.archetypes || [])" [ngValue]="archetype">{{archetype.name}}</option>
-        </ng-template>
-    </select>
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-      <label for="background">Background</label>
-      <select class="form-control" name="background" [(ngModel)]="config.background">
-        <option [ngValue]="null" selected>Any Background</option>
-        <option *ngFor="let background of backgrounds" [ngValue]="background">{{background.name}}</option>
-      </select>
-    </div>
-    <div class="col-lg-3 col-md-4 col-sm-6 form-group">
       <label for="name">Name Generator</label>
-      <select class="form-control" name="name" [(ngModel)]="config.name">
-        <option [ngValue]="null" selected>Race Default</option>
+      <select class="form-control" name="name" [(ngModel)]="config.definition">
         <option *ngFor="let name of names" [ngValue]="name">{{name.name}}</option>
       </select>
     </div>
-  </div>
-  <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-      <label for="minLevel">Level</label>
-      <div>
-        <div class="row">
-          <div class="col-5">
-            <select class="form-control" name="minLevel" [(ngModel)]="config.minLevel">
-            <option value="1" selected>1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">15</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-          </select>
-          </div>
-          <div class="col-2 text-center">
-            &ndash;&ndash;
-          </div>
-          <div class="col-5">
-            <select class=" form-control" name="maxLevel" [(ngModel)]="config.maxLevel">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5" selected>5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">15</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-          </select>
-          </div>
-        </div>
-      </div>
+      <label for="gender">Gender</label>
+      <select class="form-control" name="gender" [(ngModel)]="config.gender">
+        <option value="N" selected>Any/Neutral</option>
+        <option value="F" selected>Female</option>
+        <option value="M" selected>Male</option>
+      </select>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 form-group">
-      <label for="primaryAbility">Main Abilities</label>
-      <select class="form-control" name="primaryAbility" [(ngModel)]="config.primaryAbility">
-        <option [ngValue]="null" selected>Any Ability</option>
-        <option *ngFor="let ability of abilities" [ngValue]="ability">{{ability.name}}</option>
-    </select>
-      <select class="form-control mt-2" name="secondaryAbility" [(ngModel)]="config.secondaryAbility">
-        <option [ngValue]="null" selected>Any Ability</option>
-        <option *ngFor="let ability of abilities" [ngValue]="ability">{{ability.name}}</option>
-    </select>
+      <label for="count">Number</label>
+      <select class="form-control" name="count" [(ngModel)]="config.count">
+        <option value="10" selected>10</option>
+        <option value="20">20</option>
+        <option value="50">50</option>
+        <option value="100">100</option>
+      </select>
     </div>
   </div>
 </div>
