--- a/src/app/name-generator/name-generator.component.html
+++ b/src/app/name-generator/name-generator.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Name Generator</h1>
     <div class="mt-2">
-        <dnd-name-generator-config [config]="config"></dnd-name-generator-config>
+      <dnd-name-generator-config [config]="config"></dnd-name-generator-config>
     </div>
     <div class="row">
       <div class="col-12 text-right">
@@ -12,9 +12,15 @@
   </div>
 </div>
 <div class="container">
-  <div class="list-group">
-    <div class="list-group-item" *ngFor="let name of names">
-      {{name}}
+  <div class="row">
+    <div class="col-sm-6" *ngFor="let name of names">
+      <div class="card mb-2">
+        <div class="card-block">
+          <span class="pull-right text-muted"><i class="fa" [ngClass]="name.genderIcon"></i> {{name.genderDesc}}</span>
+          <h3 class="card-title">{{name.value}}</h3>
+          <p class="card-text">{{name.definition.name}} ({{name.format.name}})</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
