--- a/src/app/name-generator/name-generator.component.html
+++ b/src/app/name-generator/name-generator.component.html
@@ -12,7 +12,24 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
+  <div class="clearfix mb-4">
+    <form class="form-inline pull-right">
+      <div class="form-group">
+        <label class="form-control-label mr-2" for="viewMode">View Mode</label>
+        <div class="form-check form-check-inline">
+          <label class="form-check-label">
+        <input class="form-check-input" type="radio" name="viewMode" id="viewMode" value="detailed" [(ngModel)]="displayMode"> Detailed
+      </label>
+        </div>
+        <div class="form-check form-check-inline">
+          <label class="form-check-label">
+        <input class="form-check-input" type="radio" name="viewMode" id="viewMode" value="basic" [(ngModel)]="displayMode"> Basic
+      </label>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="row" *ngIf="displayMode == 'detailed'">
     <div class="col-sm-6" *ngFor="let name of names">
       <div class="card mb-2">
         <div class="card-block">
@@ -21,6 +38,11 @@
           <p class="card-text">{{name.definition.name}} ({{name.format.name}})</p>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="list-group" *ngIf="displayMode == 'basic'">
+    <div class="list-group-item" *ngFor="let name of names">
+      {{name.value}}
     </div>
   </div>
 </div>
