--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -2,5 +2,6 @@
   <div class="list-group">
     <a routerLink="/character-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Character Generator</a>
     <a routerLink="/name-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Name Generator</a>
+    <a routerLink="/item-generator" (click)="onNavigate($event)" routerLinkActive="active" class="list-group-item list-group-item-action">Item Generator</a>
   </div>
 </div>
