--- a/src/app/character-generator/skills/skills.component.html
+++ b/src/app/character-generator/skills/skills.component.html
@@ -1,4 +1,4 @@
 <div class="character-sub-block">
     <h3 class="sub-block-title">Skills</h3>
-    {{skillsList}}
+    {{character.skillString}}
 </div>
