Optimise senses and fix bugbear proficiency bug.

--- a/src/app/character-generator/senses/senses.component.html
+++ b/src/app/character-generator/senses/senses.component.html
@@ -1,4 +1,4 @@
 <div class="character-sub-block">
     <h3 class="sub-block-title">Senses</h3>
-    {{sensesDescription}}
+    {{character.sensesString}}
 </div>
