--- a/src/app/character-generator/languages/languages.component.html
+++ b/src/app/character-generator/languages/languages.component.html
@@ -1,4 +1,4 @@
 <div class="character-sub-block">
     <h3 class="sub-block-title">Languages</h3>
-    {{languagesList}}
+    {{character.languageString}}
 </div>
