--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -28,10 +28,10 @@
 <div class="bb-thin">
   <div class="row">
     <div class="col-md-4">
-      <dnd-languages [languages]="character.languages"></dnd-languages>
+      <dnd-languages [character]="character"></dnd-languages>
     </div>
     <div class="col-md-4">
-      <dnd-senses [senses]="character.senses"></dnd-senses>
+      <dnd-senses [character]="character"></dnd-senses>
     </div>
     <div class="col-md-4">
       <dnd-skills [character]="character"></dnd-skills>
