Refactor character builder into separate files.

--- a/src/app/character-generator/character-generator.component.html
+++ b/src/app/character-generator/character-generator.component.html
@@ -15,5 +15,5 @@
   </div>
 </div>
 <div class="container">
-  <dnd-character [character]="character" [generator]="generator"></dnd-character>
+  <dnd-character [character]="character" [builder]="builder"></dnd-character>
 </div>
