--- a/src/app/character-generator/character/character.component.html
+++ b/src/app/character-generator/character/character.component.html
@@ -1,6 +1,6 @@
-<dnd-character-header [character]="character" [generator]="generator"></dnd-character-header>
-<dnd-background [character]="character" [generator]="generator"></dnd-background>
-<dnd-ability-list [character]="character" [generator]="generator"></dnd-ability-list>
+<dnd-character-header [character]="character" [builder]="builder"></dnd-character-header>
+<dnd-background [character]="character" [builder]="builder"></dnd-background>
+<dnd-ability-list [character]="character" [builder]="builder"></dnd-ability-list>
 <dnd-stats [character]="character"></dnd-stats>
 <dnd-feature-list [features]="character.features"></dnd-feature-list>
 <div class="row mt-2 mb-2">
