--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -30,7 +30,7 @@
     <div class="col-md-4">
       <div class="character-sub-block">
         <h3 class="sub-block-title">Languages</h3>
-        {{character.languageString}}
+        {{character.languagesString}}
       </div>
     </div>
     <div class="col-md-4">
