--- a/src/app/character-generator/character/character.component.html
+++ b/src/app/character-generator/character/character.component.html
@@ -2,7 +2,8 @@
 <dnd-background [character]="character" [builder]="builder"></dnd-background>
 <dnd-ability-list [character]="character" [builder]="builder"></dnd-ability-list>
 <dnd-stats [character]="character"></dnd-stats>
-<dnd-feature-list [features]="character.features"></dnd-feature-list>
+<dnd-feature-list [features]="character.otherFeatures"></dnd-feature-list>
+<dnd-feature-list [features]="character.activeFeatures" title="Actions"></dnd-feature-list>
 <div class="row mt-2 mb-2">
   <div class="col-12 text-right">
     <button type="button" class="btn btn-primary btn-lg" (click)="onExportClick()">Export</button>
