--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -47,30 +47,24 @@
     </div>
   </div>
 </div>
-<div>
+<div class="bb-thin">
   <div class="row">
-    <div class="col-3">
+    <div class="col-4">
       <div class="character-sub-block">
-        <h4 class="sub-block-title">Weapon Proficiencies</h4>
-        {{character.weaponProficiencyString}}
+        <h4 class="sub-block-title">Damage Resistances</h4>
+        {{character.damageResistancesString}}
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-4">
       <div class="character-sub-block">
-        <h4 class="sub-block-title">Armor Proficiencies</h4>
-        {{character.armorProficiencyString}}
+        <h4 class="sub-block-title">Damage Immunities</h4>
+        [None]
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-4">
       <div class="character-sub-block">
-        <h4 class="sub-block-title">Tool Proficiencies</h4>
-        {{character.toolProficiencyString}}
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="character-sub-block">
-        <h4 class="sub-block-title">Other Proficiencies</h4>
-        {{character.otherProficiencyString}}
+        <h4 class="sub-block-title">Condition Immunities</h4>
+        [None]
       </div>
     </div>
   </div>
