Add proficiencies back again.

--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -49,6 +49,34 @@
 </div>
 <div class="bb-thin">
   <div class="row">
+    <div class="col-3">
+      <div class="character-sub-block">
+        <h4 class="sub-block-title">Weapon Proficiencies</h4>
+        {{character.weaponProficiencyString}}
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="character-sub-block">
+        <h4 class="sub-block-title">Armor Proficiencies</h4>
+        {{character.armorProficiencyString}}
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="character-sub-block">
+        <h4 class="sub-block-title">Tool Proficiencies</h4>
+        {{character.toolProficiencyString}}
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="character-sub-block">
+        <h4 class="sub-block-title">Other Proficiencies</h4>
+        {{character.otherProficiencyString}}
+      </div>
+    </div>
+  </div>
+</div>
+<div class="bb-thin">
+  <div class="row">
     <div class="col-4">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Damage Resistances</h4>
