Improve stat display on small screens.

--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -1,26 +1,26 @@
 <div class="bb-thin">
   <div class="row">
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-6">
       <div class="attribute-block">
         <div class="attribute-title">Level</div>
         <span class="primary">{{character.level.number}}</span>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-6">
       <div class="attribute-block">
         <div class="attribute-title">Armor Class</div>
         <span class="primary">{{character.armorClass}}</span>
         <span class="secondary">({{character.equippedArmor}})</span>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-6">
       <div class="attribute-block">
         <div class="attribute-title">Hit Points</div>
         <span class="primary">{{character.hitPoints}}</span>
         <span class="secondary">({{character.hitPointFormula}})</span>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-6">
       <dnd-speed [speed]="character.speed"></dnd-speed>
     </div>
   </div>
@@ -49,25 +49,25 @@
 </div>
 <div class="bb-thin">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Weapon Proficiencies</h4>
         {{character.weaponProficiencyString}}
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Armor Proficiencies</h4>
         {{character.armorProficiencyString}}
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Tool Proficiencies</h4>
         {{character.toolProficiencyString}}
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Other Proficiencies</h4>
         {{character.otherProficiencyString}}
@@ -77,19 +77,19 @@
 </div>
 <div class="bb-thin">
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Damage Resistances</h4>
         {{character.damageResistancesString}}
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Damage Immunities</h4>
         [None]
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <div class="character-sub-block">
         <h4 class="sub-block-title">Condition Immunities</h4>
         [None]
