Add D20 icon to 404 page.

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -48,3 +48,9 @@ sub.refresh {
     margin-left: 0.5rem;
     font-size: 60% !important;
 }
+
+.inline-icon {
+    width: 48px;
+    vertical-align: bottom;
+    display: inline;
+}
