--- a/src/app/core/not-found/not-found.component.html
+++ b/src/app/core/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1>Oops!</h1>
+    <h1><img class="inline-icon" src="/assets/dice/d20-blank.svg" /> Oops!</h1>
     <p class="lead">It looks like you failed your investigation check. Click the button below to return to the home page.</p>
     <div class="row">
       <div class="col-12 text-right">
