Display weapon attacks in actions.

--- a/src/app/character-generator/character/character.component.html
+++ b/src/app/character-generator/character/character.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 <dnd-feature-list [features]="character.otherFeatures"></dnd-feature-list>
-<dnd-feature-list [features]="character.activeFeatures" title="Actions"></dnd-feature-list>
+<dnd-feature-list [features]="character.actions" title="Actions"></dnd-feature-list>
 <div class="row mt-2 mb-2">
   <div class="col-12 text-right">
     <button type="button" class="btn btn-primary btn-lg" (click)="onExportClick()">Export</button>
