Add armor support.

--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -10,7 +10,7 @@
       <div class="attribute-block">
         <div class="attribute-title">Armor Class</div>
         <span class="primary">{{character.armorClass}}</span>
-        <span class="secondary">({{character.equippedArmor}})</span>
+        <span class="secondary">({{character.equippedArmorString}})</span>
       </div>
     </div>
     <div class="col-md-3 col-6">
