--- a/src/app/character-generator/stats/stats.component.html
+++ b/src/app/character-generator/stats/stats.component.html
@@ -27,22 +27,28 @@
 </div>
 <div class="bb-thin">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h3 class="sub-block-title">Languages</h3>
         {{character.languagesString}}
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h3 class="sub-block-title">Senses</h3>
         {{character.sensesString}}
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="character-sub-block">
         <h3 class="sub-block-title">Skills</h3>
         {{character.skillString}}
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="character-sub-block">
+        <h3 class="sub-block-title">Saving Throws</h3>
+        {{character.savingThrowProficiencyString}}
       </div>
     </div>
   </div>
