--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<dnd-navbar [title]="title" (menuClick)="sidebarOpen = !sidebarOpen"></dnd-navbar>
-<div class="wrapper">
-<dnd-sidebar [(collapsed)]="!sidebarOpen" (navigate)="sidebarOpen = false"></dnd-sidebar>
+<dnd-navbar [title]="title" (menuClick)="sidebar.toggle()"></dnd-navbar>
+<dnd-sidebar #sidebar></dnd-sidebar>
 <router-outlet></router-outlet>
 <dnd-footer></dnd-footer>
-</div>
