--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -1,6 +1,22 @@
 $menu-width: 250px;
 
+.sidebar-layout {
+    background: rgba(0, 0, 0, 0.75);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 150;
+
+    -webkit-transition: background-color 0.5s;
+
+    &.hidden {
+        background: transparent;
+        pointer-events: none;
+    }
+}
+
 .nav-sidebar {
+    pointer-events: auto;
     background: #fff;
     border-right: 5px solid #ccc;
     height: 100%;
@@ -9,7 +25,7 @@ $menu-width: 250px;
     overflow: hidden;
     width: $menu-width;
     z-index: 200;
-    
+
     &.collapse {
         display: block;
         width: 0;
