--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -4,7 +4,7 @@
             <small>
                 <div>Created by Thomas R. Wolfe</div>
                 <div>All content owned by <a href="https://www.wizards.com" target="_blank">Wizards of the Coast</a></div>
-                <div><a href="https://github.com/trwolfe13/dnd-5e-tools/" target="_blank"><i class="fa fa-github"></i> View on Github</a></div>
+                <div><a href="https://github.com/trwolfe13/dnd-5e-tools/" target="_blank"><i class="mdi mdi-github-circle"></i> View on Github</a></div>
             </small>
         </div>
     </div>
