--- a/src/app/item-generator/item-generator.component.html
+++ b/src/app/item-generator/item-generator.component.html
@@ -33,7 +33,7 @@
     <div class="col-sm-6" *ngFor="let item of items">
       <div class="card mb-2">
         <div class="card-block">
-          <span class="pull-right text-muted"><i class="fa" [ngClass]="item.definition.iconClass"></i> {{item.definition.name}}</span>
+          <span class="pull-right text-muted"><i class="mdi" [ngClass]="item.definition.iconClass"></i> {{item.definition.name}}</span>
           <h4 class="card-title">{{item.name}}</h4>
           <p class="card-text" [innerHTML]="item.description"></p>
         </div>
