--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,11 +1,3 @@
-body {
-    padding-top: 3.4rem;
-}
-
-.navbar {
-    flex-direction: row;
-}
-
 .attribute-block {
     padding: 12px;
     text-align: center;
@@ -53,4 +45,37 @@ sub.refresh {
     width: 48px;
     vertical-align: bottom;
     display: inline;
+}
+
+.loading-splash {
+    background: #f4f4f4;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    z-index: 9999999;
+    transition: opacity .3s;
+    top: 0;
+    left: 0;
+
+    .loading-inner {
+        height: 50vh;
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+    }
+}
+
+.sk-cube-grid {
+    width: 100px;
+    height: 100px;
+    margin: 40px auto;
+    .sk-cube {
+        width: calc(33.33% - 8px);
+        height: calc(33.33% - 8px);
+        background-color: $brand-primary;
+        margin: 4px;
+    }
 }
