Add print styling.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@ $mdi-font-path: "~mdi/fonts";
 @import "~bootstrap/scss/bootstrap";
 @import '~spinkit/scss/spinners/9-cube-grid';
 
+@import "print.scss";
 @import "bootstrap.scss";
 @import "theme.scss";
 @import "blocks.scss";
