--- a/src/app/shared/source-reference/source-reference.component.html
+++ b/src/app/shared/source-reference/source-reference.component.html
@@ -1,16 +1,17 @@
 <sup class="source-reference">
-    <a *ngIf="reference.url" [href]="reference.url" target="_blank">
-        <ng-container *ngTemplateOutlet="linkTpl"></ng-container>
-    </a>
-    <span *ngIf="!reference.url">
-        <ng-container *ngTemplateOutlet="linkTpl"></ng-container>
-    </span>    
+    <span class="hidden-print">
+        <a *ngIf="reference.url" [href]="reference.url" target="_blank">
+            <ng-container *ngTemplateOutlet="linkTpl"></ng-container>
+        </a>
+        <span *ngIf="!reference.url">
+            <ng-container *ngTemplateOutlet="linkTpl"></ng-container>
+        </span>
+    </span>
+    <span class="print-reference visible-print-inline">{{shortTipString}}</span>
 </sup>
 <ng-template #refContent>
     <div class="source-tip">
-        {{sourceName}}
-        <ng-template [ngIf]="reference.document">({{reference.document}})</ng-template>
-        | Page {{reference.page}}
+        {{tipString}}
     </div>
 </ng-template>
 <ng-template #linkTpl>
