--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,3 +11,5 @@ $btn-border-radius-lg: 2px;
 
 $font-family-sans-serif: 'Scala Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $font-family-secondary: "Segoe UI";
+
+$enable-print-styles: false;
